syntax = "proto3";

package blog;
//import "github.com/mwitkow/go-proto-validators/validator.proto";
//import "google/api/annotations.proto";

option go_package = "blogpb";

message Blog {
  string id = 1;
  string author_id = 2; // [(validator.field) = {msg_exists: true}];
  string title = 3;
  string content = 4;
}

message Event {
  string message = 1;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1; // will have a blog id
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message DeleteBlogRequest {
  string blog_id = 1;
}

message DeleteBlogResponse {
  string blog_id = 1;
}

message ListBlogRequest {

}

message ListBlogResponse {
  repeated Blog blogs = 1;
}

message GetEventRequest {
  string user = 1;
}

message GetEventResponse {
  string message = 1;
}

service BlogService {
  rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse){
//    option (google.api.http) = {
//        post: "/v1/blog"
//        body: "*"
//    };
  }
  rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse); // return NOT_FOUND if not found
  rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse); // return NOT_FOUND if not found
  rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse); // return NOT_FOUND if not found
  rpc ListBlog (ListBlogRequest) returns (ListBlogResponse);
  rpc GetEvent (GetEventRequest) returns (stream GetEventResponse);
}
